conformance/tests/tlsroute-listener-passthrough-supported-kinds.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-tlsroute-passthrough-supported-kind
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: tls-passthrough
      port: 443
      protocol: TLS
      allowedRoutes:
        namespaces:
          from: Same
        kinds:
          - kind: TCPRoute
          - kind: TLSRoute
      tls:
        mode: Passthrough
